[dfs] Allow the current drive to be specified on the command line.
The default is 0 (as is the case for the BBC Micro after BREAK).

--- a/dfs/Makefile
+++ b/dfs/Makefile
@@ -1,3 +1,10 @@
+RM = rm -f
 CXXFLAGS = -ggdb -Wall -Wextra -std=c++17
+TARGETS = dfs
 
-default: dfs
+default: $(TARGETS)
+
+clean:
+	$(RM) $(TARGETS)
+
+dfs: dfs.cc
