[dfs] Wrote some code for converting a filename into a fully-qualified name.

--- a/dfs/Makefile
+++ b/dfs/Makefile
@@ -1,10 +1,20 @@
 RM = rm -f
 CXXFLAGS = -ggdb -Wall -Wextra -std=c++17
-TARGETS = dfs
+CPPFLAGS_TESTS = -DVERBOSE_FOR_TESTS=1
+TESTS = test_afsp
+TARGETS = dfs $(TESTS)
+HEADERS = dfscontext.h afsp.h
 
 default: $(TARGETS)
 
 clean:
 	$(RM) $(TARGETS)
 
-dfs: dfs.cc
+dfs: dfs.cc $(HEADERS)
+	$(CXX) $(CXXFLAGS) -o $@ dfs.cc
+
+test_afsp: test_afsp.cc afsp.cc $(HEADERS)
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS_TESTS) -o $@ test_afsp.cc afsp.cc
+
+check: $(TESTS)
+	for testprogram in $(TESTS); do echo running $${testprogram}... && ./$${testprogram} || exit 1; done
