[dfs] Separate out string utilities.  Use enclosing namespaces.

--- a/dfs/Makefile
+++ b/dfs/Makefile
@@ -3,7 +3,7 @@ CXXFLAGS = -ggdb -Wall -Wextra -std=c++17
 CPPFLAGS_TESTS = -DVERBOSE_FOR_TESTS=1
 TESTS = test_afsp
 TARGETS = dfs $(TESTS)
-HEADERS = dfscontext.h afsp.h fsp.h
+HEADERS = dfscontext.h afsp.h fsp.h stringutil.h
 
 default: $(TARGETS)
 
@@ -13,10 +13,10 @@ clean:
 	$(RM) $(TARGETS)
 
 dfs: dfs.cc $(HEADERS)
-	$(CXX) $(CXXFLAGS) -o $@ dfs.cc afsp.cc fsp.cc
+	$(CXX) $(CXXFLAGS) -o $@ dfs.cc afsp.cc fsp.cc stringutil.cc
 
 test_afsp: test_afsp.cc afsp.cc $(HEADERS)
-	$(CXX) $(CXXFLAGS) $(CPPFLAGS_TESTS) -o $@ test_afsp.cc afsp.cc fsp.cc
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS_TESTS) -o $@ test_afsp.cc afsp.cc fsp.cc stringutil.cc
 
 check: everything-compiles $(TESTS)
 	for testprogram in $(TESTS); do echo running $${testprogram}... && ./$${testprogram} || exit 1; done
