[dfs] Improve modularity.
Split RegularExpression into its own header.
Moved more test code into the test modules.
Enclose everything in a top-level DFS namespace.
Add DF::internals for some code which is not part of the
public API particularly, but is complex enough to deserve sdeparate
unit tests.

--- a/dfs/Makefile
+++ b/dfs/Makefile
@@ -1,9 +1,9 @@
 RM = rm -f
 CXXFLAGS = -ggdb -Wall -Wextra -std=c++17
 CPPFLAGS_TESTS = -DVERBOSE_FOR_TESTS=1
-TESTS = test_afsp
+TESTS = test_afsp test_stringutil
 TARGETS = dfs $(TESTS)
-HEADERS = dfscontext.h afsp.h fsp.h stringutil.h
+HEADERS = dfscontext.h afsp.h fsp.h stringutil.h regularexpression.h
 
 default: $(TARGETS)
 
@@ -17,6 +17,9 @@ dfs: dfs.cc $(HEADERS)
 
 test_afsp: test_afsp.cc afsp.cc $(HEADERS)
 	$(CXX) $(CXXFLAGS) $(CPPFLAGS_TESTS) -o $@ test_afsp.cc afsp.cc fsp.cc stringutil.cc
+
+test_stringutil: test_stringutil.cc stringutil.cc $(HEADERS)
+	$(CXX) $(CXXFLAGS) $(CPPFLAGS_TESTS) -o $@ test_stringutil.cc stringutil.cc
 
 check: everything-compiles $(TESTS)
 	for testprogram in $(TESTS); do echo running $${testprogram}... && ./$${testprogram} || exit 1; done
