[basic] Added regression tests.

--- a/basic/Makefile
+++ b/basic/Makefile
@@ -6,8 +6,13 @@ tokens.o: tokens.c tokens.h
 tokens_test.o: tokens_test.c tokens.h
 tokens_test: tokens_test.o tokens.o
 
-check: tokens_test
+check: check_tokens check_golden
+
+check_tokens: tokens_test
 	./tokens_test
+
+check_golden: bbcbasic_to_text run_golden_tests.sh
+	sh run_golden_tests.sh ./bbcbasic_to_text testdata
 
 bbcbasic_to_text: bbcbasic_to_text.o tokens.o
 	$(CC) $(CFLAGS) -o $@ bbcbasic_to_text.o tokens.o
