[dfs] in ctest output, use short names for regression tests.

--- a/dfs/CMakeLists.txt
+++ b/dfs/CMakeLists.txt
@@ -65,8 +65,9 @@ set(SH_TEST_CWD ${CMAKE_CURRENT_BINARY_DIR}/work)
 file(MAKE_DIRECTORY ${SH_TEST_CWD})
 
 foreach(SH_TEST_SCRIPT ${SH_TEST_SCRIPTS})
+  file(RELATIVE_PATH shortname ${CMAKE_CURRENT_SOURCE_DIR} ${SH_TEST_SCRIPT})
   add_test(
-    NAME ${SH_TEST_SCRIPT}
+    NAME ${shortname}
     COMMAND ${BOURNE_SHELL} ${CMAKE_CURRENT_SOURCE_DIR}/test_runner.sh
     ${BOURNE_SHELL} ${SH_TEST_SCRIPT} $<TARGET_FILE:dfs> ${CMAKE_CURRENT_SOURCE_DIR}/testdata 
     WORKING_DIRECTORY ${SH_TEST_CWD})
