[basic] Turn on compiler warnings, fix compiler warnings.

--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -6,10 +6,12 @@ target_sources(decoder
    tokens.c lines.c decoder.c
    decoder.h tokens.h
    )
+target_compile_options(decoder PRIVATE ${EXTRA_WARNING_OPTIONS})
 
 ###################################### Binaries
 
 add_executable(bbcbasic_to_text bbcbasic_to_text.c)
+target_compile_options(bbcbasic_to_text PRIVATE ${EXTRA_WARNING_OPTIONS})
 target_link_libraries(bbcbasic_to_text decoder)
 install(TARGETS bbcbasic_to_text
   RUNTIME
@@ -20,6 +22,7 @@ install(TARGETS bbcbasic_to_text
 enable_testing()
 
 add_executable(tokens_test tokens_test.c)
+target_compile_options(tokens_test PRIVATE ${EXTRA_WARNING_OPTIONS})
 target_link_libraries(tokens_test decoder)
 add_test(NAME basic_tokens_test_passes COMMAND tokens_test)
 
