--- a/basic/CMakeLists.txt
+++ b/basic/CMakeLists.txt
@@ -43,3 +43,8 @@ add_test(NAME basic_usage_error_test
   ${BOURNE_SHELL} ${CMAKE_CURRENT_SOURCE_DIR}/tests/usage_error_test.sh
   ${CMAKE_CURRENT_BINARY_DIR}/bbcbasic_to_text
   ${CMAKE_CURRENT_SOURCE_DIR}/testdata )
+add_test(NAME basic_invalid_input_test
+  COMMAND
+  ${BOURNE_SHELL} ${CMAKE_CURRENT_SOURCE_DIR}/tests/invalid_input_test.sh
+  ${CMAKE_CURRENT_BINARY_DIR}/bbcbasic_to_text
+  ${CMAKE_CURRENT_SOURCE_DIR}/testdata )
