--- a/dfs/CMakeLists.txt
+++ b/dfs/CMakeLists.txt
@@ -52,6 +52,7 @@ target_sources(dfs
   cmd_type.cc
   cmd_list.cc
   cmd_sector_map.cc
+  cmd_show_titles.cc
   cmd_space.cc
   commands.cc
   dfsimage.cc
