[dfs] rename dfsimage.cc to dfs_filesystem.cc

--- a/dfs/CMakeLists.txt
+++ b/dfs/CMakeLists.txt
@@ -55,7 +55,7 @@ target_sources(dfs
   cmd_show_titles.cc
   cmd_space.cc
   commands.cc
-  dfsimage.cc
+  dfs_filesystem.cc
   main.cc
   media.cc
   storage.cc
