[dfs] refactor the I/O abstraction, removing dependence on "drive".
The anticipated benefit is that we can do more I/O in the process of
probing the data in image files to determine the format (e.g. figure
out if there is a second side in an SSD file).

--- a/dfs/CMakeLists.txt
+++ b/dfs/CMakeLists.txt
@@ -23,6 +23,7 @@ install(TARGETS dfs
 target_compile_options(dfs PRIVATE ${EXTRA_WARNING_OPTIONS})
 
 set(HEADERS
+  abstractio.h
   afsp.h
   cleanup.h
   commands.h
